fix: Align div-three according to solution.css

--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -27,5 +27,5 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  margin-left: 360px;
+  margin-left: auto;
 }
